syntax = "proto3";

option csharp_namespace = "SensorDataLoggingService";

package sensor;

service SensorDataLogger {
  rpc LogSensorData (SensorDataRequest) returns (LogSensorDataResponse);
  rpc ForwardSensorData (ForwardDataRequest) returns (ForwardDataResponse);


}

message SensorDataRequest {
  string deviceId = 1;
  string receivedAt = 2;
  string value = 3;
  string type = 4;
}

message LogSensorDataResponse {
  bool success = 1;
  string message = 2;
}

message ForwardDataRequest {
  string deviceId = 1;
  string receivedAt = 2;
  string value = 3;
  string type = 4;
}

message ForwardDataResponse {
  bool success = 1;
  string message = 2;
}